[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(420, 360)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 18.0
offset_right = -18.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
text = "RECOIL"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
text = "Spin. Shoot. Survive."
horizontal_alignment = 1

[node name="StartLevelButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
text = "Start Level Mode"

[node name="StartEndlessButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
text = "Start Endless Mode"

[node name="SkinLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
text = "Skin: 1"
horizontal_alignment = 1

[node name="CycleSkinButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
text = "Cycle Skins"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
text = "Quit"

[node name="BannerAdPlaceholder" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="BannerAdPlaceholder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Banner Ad Placeholder"
horizontal_alignment = 1
vertical_alignment = 1
